syntax = "proto3";
package graph;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;

// Ref represents a reference from source code to a Def.
message Ref {
    // DefRepo is the repository URI of the Def that this Ref refers
    // to.
    string def_repo = 1 [(gogoproto.customname) = "DefRepo", (gogoproto.jsontag) = "DefRepo,omitempty"];

    // DefUnitType is the source unit type of the Def that this Ref refers to.
    string def_unit_type = 3 [(gogoproto.customname) = "DefUnitType", (gogoproto.jsontag) = "DefUnitType,omitempty"];

    // DefUnit is the name of the source unit that this ref exists in.
    string def_unit = 4 [(gogoproto.customname) = "DefUnit", (gogoproto.jsontag) = "DefUnit,omitempty"];
    
    // Path is the path of the Def that this ref refers to.
    string def_path = 5 [(gogoproto.customname) = "DefPath", (gogoproto.jsontag) = "DefPath"];


    // Repo is the VCS repository in which this ref exists.
    string repo = 6 [(gogoproto.jsontag) = "Repo,omitempty"];

    // CommitID is the ID of the VCS commit that this ref exists
    // in. The CommitID is always a full commit ID (40 hexadecimal
    // characters for git and hg), never a branch or tag name.
    string commit_id = 7 [(gogoproto.customname) = "CommitID", (gogoproto.jsontag) = "CommitID,omitempty"];

    // UnitType is the type name of the source unit that this ref
    // exists in.
    string unit_type = 8 [(gogoproto.customname) = "UnitType", (gogoproto.jsontag) = "UnitType,omitempty"];

    // Unit is the name of the source unit that this ref exists in.
    string unit = 9 [(gogoproto.jsontag) = "Unit,omitempty"];

    // Def is true if this Ref spans the name of the Def it points to.
    bool def = 17 [(gogoproto.jsontag) = "Def,omitempty"];

    // File is the filename in which this Ref exists.
    string file = 10 [(gogoproto.jsontag) = "File,omitempty"];

    // Start is the byte offset of this ref's first byte in File.
    uint32 start = 11 [(gogoproto.jsontag) = "Start"];

    // End is the byte offset of this ref's last byte in File.
    uint32 end = 12 [(gogoproto.jsontag) = "End"];

    // StartLine is the line number where this ref begins in File.
    uint32 start_line = 13 [(gogoproto.customname) = "StartLine", (gogoproto.jsontag) = "StartLine"];

    // StartLine is the line number where this ref ends in File.
    uint32 end_line = 14 [(gogoproto.customname) = "EndLine", (gogoproto.jsontag) = "EndLine"];
};

message RefDefKey {
    string def_repo = 1 [(gogoproto.customname) = "DefRepo", (gogoproto.jsontag) = "DefRepo,omitempty"];
    string def_unit_type = 3 [(gogoproto.customname) = "DefUnitType", (gogoproto.jsontag) = "DefUnitType,omitempty"];
    string def_unit = 4 [(gogoproto.customname) = "DefUnit", (gogoproto.jsontag) = "DefUnit,omitempty"];
    string def_path = 5 [(gogoproto.customname) = "DefPath", (gogoproto.jsontag) = "DefPath"];
};
